# xrpl-wasm-stdlib

./: .augment  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  package-lock.json  package.json  split-into-prs.sh
e2e-tests/: Cargo.toml  README.md
e2e-tests/amount_tests/: Cargo.toml
e2e-tests/amount_tests/src/: lib.rs
e2e-tests/contract_data/: Cargo.toml
e2e-tests/contract_data/src/: lib.rs
e2e-tests/emit_txn/: Cargo.toml
e2e-tests/emit_txn/src/: lib.rs
e2e-tests/events/: Cargo.toml
e2e-tests/events/src/: lib copy.rs  lib.rs
e2e-tests/float_tests/: Cargo.toml  runTest.js
e2e-tests/float_tests/src/: lib.rs
e2e-tests/function_params/: Cargo.toml
e2e-tests/function_params/src/: lib.rs
e2e-tests/gas_benchmark/: Cargo.toml
e2e-tests/gas_benchmark/src/: lib.rs
e2e-tests/host_functions_test/: Cargo.toml  runTest.js
e2e-tests/host_functions_test/src/: lib.rs
e2e-tests/instance_params_other/: Cargo.toml
e2e-tests/instance_params_other/src/: lib.rs
e2e-tests/instance_params_uint/: Cargo.toml
e2e-tests/instance_params_uint/src/: lib.rs
e2e-tests/keylet_exists/: Cargo.toml
e2e-tests/keylet_exists/src/: lib.rs
e2e-tests/parameter_macro/: Cargo.toml
e2e-tests/parameter_macro/src/: lib.rs
e2e-tests/smart-contracts/amount_tests/: Cargo.toml
e2e-tests/smart-contracts/amount_tests/src/: lib.rs
e2e-tests/smart-contracts/contract_data/: Cargo.toml  README.md
e2e-tests/smart-contracts/contract_data/src/: lib.rs
e2e-tests/smart-contracts/emit_txn/: Cargo.toml
e2e-tests/smart-contracts/emit_txn/src/: lib.rs
e2e-tests/smart-contracts/events/: Cargo.toml
e2e-tests/smart-contracts/events/src/: lib.rs
e2e-tests/smart-contracts/function_params/: Cargo.toml
e2e-tests/smart-contracts/function_params/src/: lib.rs
e2e-tests/smart-contracts/instance_params_other/: Cargo.toml
e2e-tests/smart-contracts/instance_params_other/src/: lib.rs
e2e-tests/smart-contracts/instance_params_uint/: Cargo.toml
e2e-tests/smart-contracts/instance_params_uint/src/: lib.rs
e2e-tests/smart-contracts/parameter_macro/: Cargo.toml
e2e-tests/smart-contracts/parameter_macro/src/: lib.rs
e2e-tests/test_utils/: Cargo.toml
e2e-tests/test_utils/src/: assert.rs  lib.rs
e2e-tests/trace_escrow_account/: Cargo.toml  README.md  runTest.js
e2e-tests/trace_escrow_account/src/: lib.rs
e2e-tests/trace_escrow_finish/: Cargo.toml  README.md  runTest.js
e2e-tests/trace_escrow_finish/src/: lib.rs
e2e-tests/trace_escrow_ledger_object/: Cargo.toml  README.md  runTest.js
e2e-tests/trace_escrow_ledger_object/src/: lib.rs
e2e-tests/trace_escrow_trust_line/: Cargo.toml  README.md  runTest.js
e2e-tests/trace_escrow_trust_line/src/: lib.rs
examples/smart-escrows/hello_world/: Cargo.toml  README.md  runTest.js
examples/smart-escrows/kyc/: Cargo.toml  README.md  runTest.js
examples/smart-escrows/ledger_sqn/: Cargo.toml  README.md  runTest.js
examples/smart-escrows/nft_owner/: Cargo.toml  README.md  runTest.js
examples/smart-escrows/notary/: Cargo.toml  README.md  runTest.js
examples/smart-escrows/oracle/: Cargo.toml  README.md  runTest.js
ui/: index.html  (+3 more)
xrpl-contract-stdlib/: Cargo.toml  README.md
xrpl-contract-stdlib/src/: lib.rs  sfield.rs  sflags.rs
xrpl-contract-stdlib/src/ctx/: contract_call.rs  mod.rs
xrpl-contract-stdlib/src/current_tx/: contract_call.rs  mod.rs  traits.rs
xrpl-contract-stdlib/src/data/: codec.rs
xrpl-contract-stdlib/src/event/: codec_v2.rs  codec_v3.rs  mod.rs
xrpl-contract-stdlib/src/params/: function.rs  instance.rs  mod.rs  types.rs
xrpl-contract-stdlib/src/submit/: amount.rs  emit.rs  inner_objects.rs  mod.rs
xrpl-contract-stdlib/xrpl-parameter-macro/src/: lib.rs
xrpl-escrow-stdlib/: Cargo.toml  README.md
xrpl-escrow-stdlib/src/: lib.rs
xrpl-escrow-stdlib/src/ctx/: escrow_finish.rs  finish_result.rs  mod.rs
xrpl-escrow-stdlib/src/current_tx/: escrow_finish.rs  mod.rs  traits.rs
xrpl-escrow-stdlib/src/ledger_objects/: current_escrow.rs  escrow.rs  mod.rs  traits.rs
xrpl-escrow-stdlib/tests/: compile_tests.rs  macros.rs  reexport_macros.rs
xrpl-escrow-stdlib/tests/compile_fail/: reject_with_positive.stderr  succeed_with_negative.stderr  succeed_with_zero.stderr
xrpl-macros/: Cargo.toml  README.md
xrpl-macros/src/: blob.rs  currency.rs  hash256.rs  lib.rs  pubkey.rs  r_address.rs
xrpl-macros/src/entry_point/: codegen.rs  mod.rs  smart_escrow.rs
xrpl-macros/tests/: compile_fail.rs  r_address.rs
xrpl-macros/tests/blob/: fail_non_literal.stderr
xrpl-macros/tests/pubkey/: fail_non_literal.rs
xrpl-macros/tests/r_address/: fail_non_literal.stderr
xrpl-macros/tests/smart_escrow/: fail_attr_args.rs  fail_attr_args.stderr  fail_no_params.stderr  fail_not_a_fn.rs  fail_not_a_fn.stderr  fail_wrong_param.rs  fail_wrong_param.stderr  fail_wrong_return.rs  fail_wrong_return.stderr
xrpl-stdlib-test-utils/: Cargo.toml
xrpl-stdlib-test-utils/src/: lib.rs  mock_common.rs  mock_escrow.rs
xrpl-wasm-stdlib/: Cargo.toml  README.md
xrpl-wasm-stdlib/docs/: NAMING_CONVENTIONS.md
xrpl-wasm-stdlib/src/: ctx.rs  lib.rs  sfield.rs  sflags.rs  tx_flags.rs
xrpl-wasm-stdlib/src/core/: chain.rs  keylets.rs  locator.rs  mod.rs  random.rs  type_codes.rs
xrpl-wasm-stdlib/src/ctx/: finish_result.rs  mod.rs
xrpl-wasm-stdlib/src/fields/: decoder.rs
xrpl-wasm-stdlib/src/host/: error_codes.rs  field_helpers.rs  host_bindings_empty.rs  host_bindings_for_testing.rs  host_bindings_test.rs  host_bindings_trait.rs  host_bindings_wasm.rs  mod.rs  trace.rs
xrpl-wasm-stdlib/tests/: macros.rs
xrpl-wasm-stdlib/tests/decoder/: fail_obj_only_missing_from_current_tx.rs  fail_tx_only_missing_from_ledger.rs
xrpl-wasm-stdlib/xrpl-address-macro/: Cargo.toml
xrpl-wasm-stdlib/xrpl-macros/: Cargo.toml  README.md
xrpl-wasm-stdlib/xrpl-macros/src/: blob.rs  currency.rs  hash256.rs  hex_util.rs  lib.rs  pubkey.rs  r_address.rs  typed_const.rs
xrpl-wasm-stdlib/xrpl-macros/tests/: compile_fail.rs  r_address.rs
xrpl-wasm-stdlib/xrpl-parameter-macro/: Cargo.toml
(+226 files in other folders)
