[workspace]
resolver = "2"
members = [
    "float_tests",
    "gas_benchmark",
    "host_functions_test",
    "keylet_exists",
    "test_utils",
    "trace_escrow_account",
    "trace_escrow_finish",
    "trace_escrow_ledger_object",
]

[workspace.dependencies]
xrpl-wasm-stdlib = { path = "../xrpl-wasm-stdlib" }
test_utils = { path = "test_utils" }

[profile.release]
opt-level = "s"   # Optimize for size
lto = true        # Link-time optimization
codegen-units = 1 # Compile in one unit for better optimization and smaller binary size
panic = "abort"   # `no-std` can't unwind on panic, so choose abort (plus no panic handler means smaller binary)

[profile.dev]
panic = "unwind" # For debugging, allows unwinding if code is executed as Rust (e.g., unit tests)
