[package]
name = "xrpl-escrow-stdlib"
version = "0.1.0"
edition = "2024"
description = "Smart Escrow types, entry-point context, and host-function wrappers for XRPL WebAssembly contracts"
license.workspace = true
repository.workspace = true
keywords = ["xrpl", "wasm", "smart-escrow", "no-std"]
categories = ["no-std", "embedded", "cryptography::cryptocurrencies"]

[lib]
crate-type = ["lib"]

[dependencies]
xrpl-common-stdlib = { path = "../xrpl-common-stdlib" }

[dev-dependencies]
xrpl-common-stdlib = { path = "../xrpl-common-stdlib", features = ["test-host-bindings"] }
xrpl-stdlib-test-utils = { path = "../xrpl-stdlib-test-utils" }
mockall = "0.15.0"
trybuild = "1"
