[package]
name = "xrpl-macros"
version = "0.1.0"
edition = "2024"
description = "Internal proc macro for xrpl-common-stdlib - use xrpl-common-stdlib instead"
license.workspace = true
repository.workspace = true
homepage = "https://github.com/ripple/xrpl-wasm-stdlib"
readme = "README.md"
keywords = ["xrpl", "macro", "address", "codec"]
categories = ["cryptography", "no-std", "encoding"]

[dependencies]
bs58 = "0.5"
sha2 = "0.11"

[lib]
proc-macro = true

[dependencies.syn]
version = "3.0"
features = ["full"]

# proc-macro2 provides the TokenStream type used in codegen.rs to build quote!
# output before converting to the proc_macro boundary. quote and syn both
# re-export it, but listing it explicitly avoids relying on transitive availability.
[dependencies.proc-macro2]
version = "1.0"

[dependencies.quote]
version = "1.0"

[dev-dependencies]
trybuild = "1.0"
