[package]
name = "xrpl-wasm-stdlib"
version.workspace = true
edition = "2024"
description = "Standard library for XRPL WebAssembly smart contracts"
license.workspace = true
repository.workspace = true
homepage = "https://github.com/ripple/xrpl-wasm-stdlib"
readme = "../README.md"
keywords = ["xrpl", "wasm", "smart-contracts", "no-std"]
categories = ["no-std", "embedded", "cryptography::cryptocurrencies"]
include = ["src/", "README.md", "docs/**/*"]


[lib]
crate-type = ["lib"]

[features]
# Enable test host bindings for coverage testing.
# This is equivalent to cfg(test) but can be explicitly enabled for cargo llvm-cov.
test-host-bindings = ["dep:mockall"]

[dependencies]
xrpl-address-macro = { version = "0.7.1", path = "xrpl-address-macro" }
mockall = { version = "0.14.0", optional = true }

[dev-dependencies]
mockall = "0.14.0"
