[package]
name = "amount_tests"
version = "0.1.0"
edition = "2024"
description = "Tests for all Amount variants: XRP, IOU, MPT"
license = "MIT"

[workspace]

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
overflow-checks = false

[profile.dev]
panic = "unwind"

[dependencies]
xrpl-contract-stdlib = { path = "../../xrpl-contract-stdlib" }
