[package]
name = "float_tests"
version = "0.8.0"
edition = "2024"
description = "Test suite for XRPL floating-point operations including arithmetic, comparison, and mathematical functions"
license = "ISC"

[lib]
crate-type = ["cdylib"]

[dependencies]
xrpl-wasm-stdlib = { path = "../../xrpl-wasm-stdlib" }
