[package]
name = "gas_benchmark"
version = "0.8.0"
edition = "2024"
description = "Gas benchmark contract for measuring optimization impact"
license = "ISC"

[lib]
crate-type = ["cdylib"]

[dependencies]
xrpl-common-stdlib = { path = "../../xrpl-common-stdlib" }
xrpl-escrow-stdlib = { path = "../../xrpl-escrow-stdlib" }
