[package]
name = "instance_params_other"
version = "0.1.0"
edition = "2024"
description = ""
license = "MIT"

[workspace]

[lib]
crate-type = ["cdylib"]

[target.wasm32-unknown-unknown]
rustflags = ["-C", "target-feature=-bulk-memory"]

[profile.release]
opt-level = "z"         # Most aggressive size optimization
lto = true
codegen-units = 1
panic = "abort"
strip = true            # Remove debug symbols
debug = false           # Disable debug info generation
overflow-checks = false # Disable overflow checks (use cautiously)

[profile.dev]
panic = "unwind"

[dependencies]
xrpl-wasm-stdlib = { path = "../../xrpl-wasm-stdlib" }
