[package]
edition = "2024"
name = "keylet_exists"
version = "0.1.0"
description = "Smart Escrow example demonstrating keylet generation and ledger object existence verification"
license = "ISC"

[lib]
crate-type = ["cdylib"]

[dependencies]
xrpl-common-stdlib = { path = "../../xrpl-common-stdlib" }
xrpl-escrow-stdlib = { path = "../../xrpl-escrow-stdlib" }
