[package]
name = "trace_escrow_finish"
version = "0.5.1-devnet5"
edition = "2024"
description = "End-to-end test that validates EscrowFinish transaction field access and tracing functionality"
license = "ISC"

[lib]
crate-type = ["cdylib"]

[dependencies]
xrpl-wasm-stdlib = { workspace = true }
test_utils = { workspace = true }
