[package]
name = "trace_escrow_ledger_object"
version = "0.8.0"
edition = "2024"
description = "End-to-end test that validates Escrow ledger object field access and tracing functionality"
license = "ISC"

[lib]
crate-type = ["cdylib"]

[dependencies]
xrpl-wasm-stdlib = { workspace = true }
test_utils = { workspace = true }
