[package]
name = "xrpl-address-macro"
version = "0.1.0"
edition = "2024"
description = "Internal proc macro for xrpl-wasm-stdlib - use xrpl-wasm-stdlib instead"
license.workspace = true
repository.workspace = true
homepage = "https://github.com/ripple/xrpl-wasm-stdlib"
readme = "README.md"
keywords = ["xrpl", "macro", "address", "codec"]
categories = ["cryptography", "no-std", "encoding"]

[dependencies]
bs58 = "0.5"
sha2 = "0.10"

[lib]
proc-macro = true

[dependencies.syn]
version = "2.0"
features = ["full"]

[dependencies.quote]
version = "1.0"
