[package]
name = "hello_world"
version = "1.0.0"
edition = "2024"
description = "A Smart Escrow that simply emits 'Hello World' into the trace log and then releases the escrow."
license = "ISC"

[lib]
crate-type = ["cdylib"]

[dependencies]
xrpl-common-stdlib = { path = "../../../xrpl-common-stdlib" }
xrpl-macros = { path = "../../../xrpl-macros" }
xrpl-escrow-stdlib = { path = "../../../xrpl-escrow-stdlib" }
