[package]
name = "ledger_sqn"
version = "0.1.0"
edition = "2024"
description = "Smart Escrow example that unlocks when the ledger sequence number reaches a minimum threshold"
license = "ISC"


[lib]
crate-type = ["cdylib"]


[dependencies]
xrpl-common-stdlib = { path = "../../../xrpl-common-stdlib" }
xrpl-macros = { path = "../../../xrpl-macros" }
xrpl-escrow-stdlib = { path = "../../../xrpl-escrow-stdlib" }
