[package]
name = "atomic_swap1"
version = "0.1.0"
edition = "2024"
description = "Smart Escrow example that implements atomic swaps using memo-based counterpart escrow validation"
license = "ISC"


[lib]
crate-type = ["cdylib"]


[dependencies]
xrpl-wasm-stdlib = { path = "../../../xrpl-wasm-stdlib" }
